--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-R" />
     <link rel="icon" type="image/png" href="https://i.postimg.cc/NFqDfZyr/Logo-Est-dio-Tropical.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio Beleza Tropical</title>
@@ -51,5 +51,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script async src="//www.instagram.com/embed.js"></script>
   </body>
 </html>
